--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -16,9 +16,8 @@
 \maketitle
 
 \begin{abstract}
-Placeholder.
+The American Community Survey is an ongoing survey by the US Census Bureau that provides yearly demographic data.  The Census Bureau has released an online API to give the public access to the data.
 
-\hh{your solution to cut down on the length of the commands looks great!}
 \end{abstract}
 
 \section{Introduction}
@@ -41,7 +40,7 @@ The bracketed expressions in the above URL represent  parameters that need to be
 $[$KEY$]$ is an id code required to perform a valid GET request.  A developer's key uniquely identifies anyone who requests data from the API.  Requesting a key can be done by registering at \url{http://www.census.gov/developers/tos/key_request.html}.
 
 \subsection{Year and Dataset}
-$[$YEAR$]$ and $[$DATASET$]$ specify the dataset and year of the data.  The available datasets include the decennial census and the ACS.   ACS datasets are provided in form of 1-year, 3-year and 5-year \hh{aggregates}.  The $[$YEAR$]$ variable for the ACS datasets indicates the final year in the aggregate.  For example, the 2012 5-year ACS dataset is the ACS dataset that spans 2008-2012 and the 2012 3-year ACS dataset is the ACS dataset that spans 2010-2012.  For the decennial census the $[$YEAR$]$ indicates the year the census data was collected.  The $[$DATASET$]$ parameter is an abbreviation for the dataset assigned by the Census Bureau.  For example, the ACS 5-year dataset is $acs5$ and the ACS 1-year dataset is $acs1$.  Table \ref{tab:datasettable} gives an overview of timeframes, datasets and the associated abbreviations assigned by the census bureau.\\
+$[$YEAR$]$ and $[$DATASET$]$ specify the dataset and year of the data.  The available datasets include the decennial census and the ACS.   ACS datasets are provided in form of 1-year, 3-year and 5-year aggregates.  The $[$YEAR$]$ variable for the ACS datasets indicates the final year in the aggregate.  For example, the 2012 5-year ACS dataset is the ACS dataset that spans 2008-2012 and the 2012 3-year ACS dataset is the ACS dataset that spans 2010-2012.  For the decennial census the $[$YEAR$]$ indicates the year the census data was collected.  The $[$DATASET$]$ parameter is an abbreviation for the dataset assigned by the Census Bureau.  For example, the ACS 5-year dataset is $acs5$ and the ACS 1-year dataset is $acs1$.  Table \ref{tab:datasettable} gives an overview of timeframes, datasets and the associated abbreviations assigned by the census bureau.\\
 <<datasettable, echo=FALSE, warning=FALSE, message=FALSE, results='asis'>>=
 library(xtable)
 sets = data.frame(Description = c("Decennial Census", "ACS 5-year", "ACS 3-year", "ACS 1-year"),
@@ -61,7 +60,7 @@ http://api.census.gov/data/2011/acs3?key=[KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
 \end{verbatim}
 
 \subsection{Geography}
-$[$GEOGRAPHY$]$ describes the geographic region of interest, \hh{and the} $\&for=[GEOGRAPHY]$ tag is used to indicate this region. The geographic area can include the entire United States:
+$[$GEOGRAPHY$]$ describes the geographic region of interest, and the $\&for=[GEOGRAPHY]$ tag is used to indicate this region. The geographic area can include the entire United States:
 \begin{verbatim}
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=us:*
 \end{verbatim}
@@ -71,12 +70,12 @@ http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:06
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:01,06
 \end{verbatim}
-The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), and a set of selected states (Alabama and California), respectively.  Some geographic regions are nested within larger regions and \hh{a GET request} may require us to specify the containing region. The  $\&in=[GEOGRAPHY]$ tag is used to \hh{further} specify an appropriate containing region for the region of interest.  For example, counties are contained within states and the following statement is a GET request for a county or counties within a specific state:
+The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), and a set of selected states (Alabama and California), respectively.  Some geographic regions are nested within larger regions and a valid GET request may require us to specify the containing region. The  $\&in=[GEOGRAPHY]$ tag is used to further specify an appropriate containing region for the region of interest.  For example, counties are contained within states and the following statement is a GET request for a county or counties within a specific state:
 \begin{verbatim}
 http://api.census.gov/data/ [...] &for=county:037&in=state:06
 http://api.census.gov/data/ [...] &for=county:*&in=state:06
 \end{verbatim}
-The above HTTP GET requests  Los Angeles County in California and all counties in California, respectively (see figure \ref{fig:county}, note that we truncated above URL for display purposes).  There are even smaller geographic regions and for some of these geographic entities multiple containing regions have to be specified for a valid GET request.  For example, census tracts are contained within both counties and states.  Here is how \hh{we can} specify a \hh{valid GET request to access data for a }census tract or multiple census tracts within a county and state:
+The above HTTP GET requests  Los Angeles County in California and all counties in California, respectively (see figure \ref{fig:county}, note that we truncated above URL for display purposes).  There are even smaller geographic regions and for some of these geographic entities multiple containing regions have to be specified for a valid GET request.  For example, census tracts are contained within both counties and states.  Here is how to specify a valid GET request to access data for a census tract or multiple census tracts within a county and state:
 \begin{verbatim}
 http://api.census.gov/data/ [...] &for=tract:*&in=state:06+county:037
 http://api.census.gov/data/ [...] &for=tract:101110&in=state:06+county:037
@@ -222,7 +221,7 @@ qplot(long, lat, data=subset(map_data('county'), region=="iowa"), group=group, o
 
 For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset or the XML or JSON geography files.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}, the XML file is located at \url{http://api.census.gov/data/2012/acs5/geography.xml} and the JSON file is located at \url{http://api.census.gov/data/2012/acs5/geography.json}.  The above maps are available in shapefile format from the Census Bureau website located at \url{http://www.census.gov/cgi-bin/geo/shapefiles2013/main}.
 
-\hh{The map for Iowa's school districts can - after downloading the corresponding shapefile, e.g.~be created using the following code, which is based on R packages ggplot2 \cite{ggplot2}, maps \cite{maps}, and maptools \cite{maptools}:}
+The map for Iowa's school districts can - after downloading the corresponding shapefile, e.g.~be created using the following code, which is based on R packages ggplot2 \cite{ggplot2}, maps \cite{maps}, and maptools \cite{maptools}:
 <<sd, eval=FALSE, tidy=FALSE>>=
 library(maps)
 library(maptools)
@@ -359,7 +358,7 @@ The list of variables, $variables.json$ and $variables.xml$ not only contain a l
 Using the above table, $668 \pm 356$ is a 90$\%$ confidence interval for the number of women in Alameda County 75 and over with health insurance.
 
 \section{Limitations of the API}
-\hh{The paper by } \citet{stangl:2013} talks about using the ACS as a dataset for classroom exercises \hh{(at the undergraduate level) with an emphasis on } how \hh{data collected from these surveys} are used to make important policy decisions.  The paper contains a number of classroom exercises that ask the reader to calculate  basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample \hh{which constitutes a 0.005\% subsample of the 2010 ACS, or about a 0.0003\% representation of the US population. It would be advantageous by far to get corresponding answers based on the whole of the 2010 ACS}. \hh{XXX I will try to find an educational reference that realistic examples in the classroom are better for the learning outcome.}  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
+The paper by \citet{stangl:2013} talks about using the ACS as a dataset for classroom exercises \hh{(at the undergraduate level) with an emphasis on } how \hh{data collected from these surveys} are used to make important policy decisions.  The paper contains a number of classroom exercises that ask the reader to calculate  basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample \hh{which constitutes a 0.005\% subsample of the 2010 ACS, or about a 0.0003\% representation of the US population. It would be advantageous by far to get corresponding answers based on the whole of the 2010 ACS}. \hh{XXX I will try to find an educational reference that realistic examples in the classroom are better for the learning outcome.}  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
 \\
 Using the Census Bureau's online API for these exercises presents us with three main problems:
 \begin{enumerate}
@@ -395,7 +394,7 @@ By contrast the online API does not provide individual specific data.  When we p
 \\
 In table \ref{fig:example} we specify state level summaries for health insurance coverage status for various age groups by gender (from the census API this is table B27001).  Each variable is in the form of a table and as previously mentioned we refer to this as a $concept$ and each column in table \ref{fig:example} is referred a $label$.  The first label of each concept is an overall total; the total number of people in the specified geographic region that answered questions relating to the requested concept.   Subsequent labels are subsets of this overall total.  We've conveniently renamed column headers in table \ref{fig:example}; the naming convention from data provided by the API is to enumerate each label with the table name: $B27001\_001$, $B27001\_002$ etc.\\
 \\
-The way this data is organized is not tidy \cite{hadley:2014}.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of \emph{total} columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form. \\
+The way this data is organized is not in a tidy format, see \cite{hadley:2014}.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of \emph{total} columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form. \\
 
 <<melted, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results="asis">>=
 library(reshape2)
@@ -580,7 +579,7 @@ Although the ACS is a yearly survey, in its current form it is difficult to comp
 \\
 It is possible to circumvent this overlapping data problem by combining the ACS 5-year estimate with the ACS 1-year estimate.  The 2011 ACS 5-year and the 2012 ACS 1-year do not contain overlapping data.  However, datasets from different years contain different demographic variables.  For example, questions regarding healthcare were first added in 2008 and datasets prior to 2008 will not contain healthcare variables.  The ACS 1-year estimates have smaller sample sizes and as a result not all geographic regions are available.  The ACS 1-year estimates only have data available for geographic regions with populations of 65,000 or greater.\\
 \\
-As a guideline the Census Bureau recommends comparing similar length datasets that do not overlap.  For example, comparing 1-year estimates from different years or 3-year estimates for two periods that don't overlap.  Unfortunately, the only option for comparing data across years out of the available datasets from the online API is to compare 2011 and 2012 1-year estimates.
+As a guideline, the Census Bureau recommends comparing similar length datasets that do not overlap.  For example, comparing 1-year estimates from different years or 3-year estimates for two periods that don't overlap.  Unfortunately, the only option for comparing data across years out of the available datasets from the online API is to compare 2011 and 2012 1-year estimates.
 
 %\subsection{Nonresponse}
 
